--- a/src/pages/maps/maps.html
+++ b/src/pages/maps/maps.html
@@ -5,10 +5,20 @@
   Ionic pages and navigation.
 -->
 <ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Mapa</ion-title>
+  </ion-toolbar>
 
-  <ion-navbar>
-    <ion-title>Maps</ion-title>
-  </ion-navbar>
+  <ion-toolbar color="primary">
+    <ion-searchbar 
+      [(ngModel)]="myInput" 
+      [showCancelButton]="shouldShowCancel" 
+      (ionInput)="onInput($event)" 
+      (ionCancel)="onCancel($event)"
+      placeholder="Buscar sitio"
+      >
+    </ion-searchbar>
+  </ion-toolbar>
 
 </ion-header>
 
